# toktok

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODO.md  mail.creds.example  services.yaml  toktok.example.yaml
examples/: toktok.example.yaml
src/: args.rs  checker.rs  configuration.rs  data.rs  executor.rs  lib.rs  main.rs  notification.rs  queue.rs  scheduler.rs  task.rs  task_info.rs  task_logger.rs
src/checker/: error.rs  mod.rs  server.rs  structs.rs  web.rs
src/executors/: factory.rs  mod.rs  web_executor.rs
src/notification/: email.rs  error.rs  mod.rs
src/parser/: config.rs  error.rs  keys.rs  mod.rs
