[package]
name = "toktok"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
jiff = "0.2.15"
lettre = "0.11.18"
log = "0.4.28"
reqwest = "0.12.22"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
yaml-rust2 = "0.10.3"
